# NanoWOL

./: .gitignore  CHANGELOG.md  README.md  agent.py  client.py  client_shutdown.py  client_wol.py  config.example.yaml  crypto.py  gen_keys.py  nanowol.py  pyproject.toml  requirements.txt  service.py  test_nanowol.py  version.py  webui.py  wherewol.py  wherewol_webui.py  wol.py
docs/: architecture.md
static/: NANO_WEBUI_GUIDE.md  nano-webui.css
templates/: index.html
