[project]
name = "nanowol"
version = "1.2.2"
description = "Secure remote Wake-on-LAN & shutdown controller with RSA authentication"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "goAuD"}
]
keywords = ["wake-on-lan", "wol", "remote", "shutdown", "power-management", "rsa", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: System :: Power (UPS)",
    "Topic :: System :: Systems Administration",
]
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0.0",
    "requests>=2.31.0",
    "cryptography>=42.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
]

[project.scripts]
nanowol = "nanowol:cli"

[project.urls]
Homepage = "https://github.com/goAuD/NanoWOL"
Repository = "https://github.com/goAuD/NanoWOL"
Issues = "https://github.com/goAuD/NanoWOL/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["nanowol", "agent", "webui", "crypto", "wol", "service", "version"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]

